add and checkmark changed

--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -193,8 +193,8 @@
     <div class="widthOfColumn">
       <div class="tagsOfInterests">
         <div class="interestsSettings">
-          <button class='closeTagsOfInterests'>✓</button>
-          <button class='addInterestButton'>Add + </button>
+          <button class='addInterestButton'>&#xFF0B;</button>
+          <button class='closeTagsOfInterests'>save</button>
         </div>
       </div>
 
@@ -202,8 +202,8 @@
     <div class="widthOfColumn">
       <div class="tagsOfNonInterests">
         <div class="interestsSettings">
-          <button class='closeTagsOfNonInterests'>✓</button>
-          <button class='addNonInterestButton'>Add + </button>
+          <button class='addNonInterestButton'>&#xFF0B;</button>
+          <button class='closeTagsOfNonInterests'>save</button>
         </div>
       </div>
     </div>
