--- a/src/umr/static/scripts/newStyling/article-settings.css
+++ b/src/umr/static/scripts/newStyling/article-settings.css
@@ -240,30 +240,23 @@ button {
 
 .interestsSettings {
   display: flex;
-  width: 8em;
-  flex-direction: column;
+  width: 6.5em;
   float: right;
-  justify-content: space-between;
-  margin-top: -0.2em;
+  justify-content: space-around;
+  margin-top: 3em;
 }
 
 .addInterestButton, .addNonInterestButton {
   box-shadow: none;
   all: unset;
-  border: 0.06em solid #ffbb54;
-  border-radius: 1em;
-  padding: 0.2em 1em;
+  border: 0.0625em solid #ffbb54;
+  border-radius: 100%;
   background-color: #ffffff;
   color: #ffbb54;
   font-size: 1em;
-  font-family: Montserrat;
-  font-weight: 400;
-  text-align: center;
-  min-width: 3em;
-  margin-top: 1.1em;
-  margin-bottom: 0.2em;
-  width: 1em;
-  margin-left: 2.9em;
+  width: 1.5em;
+  height: 1.5em;
+  margin-top: 0.1em;
 }
 
 .addInterestButton:active, .addNonInterestButton:active {
@@ -273,17 +266,23 @@ button {
 .closeTagsOfInterests, .closeTagsOfNonInterests {
   box-shadow: none;
   all: unset;
-  border: 0.0625em solid #ffbb54;
+  border: 0.07em solid #ffbb54;
   border-radius: 1em;
-  background-color: #ffffff;
-  color: #ffbb54;
+  padding: 0.2em 1em;
+  background-color:  #ffbb54;
+  color: #ffffff;
   font-size: 1em;
-  padding: 0.1em;
-  margin-top: 0.2em;
-  float: right;
-  width: 1.2em;
+  font-family: Montserrat;
+  font-weight: 300;
+  text-align: center;
+  min-width: 2em;
   height: 1.2em;
-  margin-left: 6.5em;
+  margin-bottom: 0.2em;
+}
+
+.addInterestButton:hover, .addNonInterestButton:hover {
+  background-color: #ffbb54;
+  color:#ffffff;
 }
 
 #searchIcon-LinkID {
@@ -308,7 +307,7 @@ button {
   }
 
   .interestsSettings {
-    height: 7em;
+    
   }
 }
 
@@ -333,17 +332,8 @@ button {
     margin-left: 1em;
   }
 
-  .addInterestButton, .addNonInterestButton {
-    margin-left: -2em;
-  }
-
-  .closeTagsOfInterests, .closeTagsOfNonInterests {
-    margin-left: 1.5em;
-  }
-
   .interestsSettings {
-    width: 3em;
-    height: 9em;
+    margin-top: 6.8em;
   }
 
   .interestButton {
@@ -454,18 +444,6 @@ button {
   .tagsOfInterests, .tagsOfNonInterests {
     width: 101%;
     margin-left: -0.5em;
-  }
- 
-  .interestsSettings {
-    height: 9em;
-  }
-
-  .closeTagsOfInterests, .closeTagsOfNonInterests {
-    margin-left: 1.5em;
-  }
-
-  .addInterestButton, .addNonInterestButton {
-    margin-left: -2em;
   }
 
   .articleLinkTitle {
