--- a/src/umr/templates/sideBar.html
+++ b/src/umr/templates/sideBar.html
@@ -1,13 +1,17 @@
 <head>
   <link rel="stylesheet" type="text/css"
     href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/side-bar.css') }}" />
+
+  <script type="text/javascript"
+    src="{{ url_for('reader_blueprint.static',filename='scripts/app/helpers/Sidebar.js') }}"></script>
+  <script type="text/javascript"
+    src="{{ url_for('reader_blueprint.static',filename='scripts/app/helpers/Settings.js') }}"></script>
 </head>
 
 <nav class="nav-menu">
-  <a href="javascript:void(0);" class="arrow-icon" id="arrow-p" onclick="sideBarFunction(this)">
+  <a href="javascript:void(0);" class="arrow-icon" id="arrow-p" onclick="sideBarFunction(this);">
     <p class="arrow-nav-icon">▲</p>
   </a>
-
   <div class="sidenav" id="myTopnav">
     <a href="/read" rel="external">
       <img class="zeeguuLogo" src="{{ url_for('reader_blueprint.static',filename='images/zeeguuLogo.svg') }}"
@@ -44,101 +48,6 @@
         <a href="/practice/#!/practice/plan/2" rel="external">Ambitious</a>
       </div>
     </div>
-    <script>
-      function sideBarFunction(element) {
-        var nav = document.getElementById("myTopnav");
-        var navstyle = nav.style.display;
-        if (navstyle == "none") {
-          nav.style.display = "block";
-          element.className = "arrow-icon";
-          if (document.getElementById("main-containerID") !== null) {
-            document.getElementById("main-containerID").style.cssText =
-              "margin-left:12.5em;";
-          }
-          if (document.getElementById("settingsContainer") !== null) {
-            document.getElementById("settingsContainer").style.cssText =
-              "margin-left:12.5em;";
-          }
-          if (document.getElementById("statsContainerID") !== null) {
-            document.getElementById("statsContainerID").style.cssText =
-              "margin-left:14em;";
-            document.getElementById("containerStats").style.cssText =
-              "margin-left:0em;";
-          }
-          if (document.getElementById("starter-body") !== null) {
-            document.getElementById("starter-body").style.cssText =
-              "padding-left:11em;";
-            document.getElementById("footnotes").style.cssText =
-              "padding-left:5em;";
-          }
-          if (document.getElementById("ex-module") !== null) {
-            document.getElementById("ex-module").style.cssText =
-              "margin-left:12.5em;";
-          }
-          if (document.getElementById("aboutContainer") !== null) {
-            document.getElementById("aboutContainer").style.cssText =
-              "margin-left:10em;";
-          }
-          if (document.getElementById("emptyPage") !== null) {
-            document.getElementById("emptyPage").style.cssText =
-              "margin-left:5em;";
-          } else {
-            document.getElementById("wordsContainer").style.cssText =
-              "margin-left:3.5em;";
-          }
-        } else {
-          nav.style.display = "none";
-          element.className = "arrow-none-block";
-          if (document.getElementById("main-containerID") !== null) {
-            document.getElementById("main-containerID").style.cssText =
-              "margin-left:0px;";
-          }
-          if (document.getElementById("settingsContainer") !== null) {
-            document.getElementById("settingsContainer").style.cssText =
-              "margin:auto;";
-          }
-          if (document.getElementById("statsContainerID") !== null) {
-            document.getElementById("statsContainerID").style.cssText =
-              "margin-left:0em;";
-            document.getElementById("containerStats").style.cssText =
-              "margin-left:-9em;";
-          }
-          if (document.getElementById("starter-body") !== null) {
-            document.getElementById("starter-body").style.cssText =
-              "padding-left:0em;";
-            document.getElementById("footnotes").style.cssText =
-              "padding-left:0em;";
-          }
-          if (document.getElementById("ex-module") !== null) {
-            document.getElementById("ex-module").style.cssText =
-              "margin-left:0px;";
-          }
-
-          if (document.getElementById("aboutContainer") !== null) {
-            document.getElementById("aboutContainer").style.cssText =
-              "margin-left:1em;";
-          }
-          if (document.getElementById("emptyPage") !== null) {
-            document.getElementById("emptyPage").style.cssText =
-              "margin-left:0em;";
-          } else {
-            document.getElementById("wordsContainer").style.cssText =
-              "margin-left:0em;";
-          }
-        }
-      }
-
-      function settingsFunction(element) {
-        var box = document.getElementById("hidden");
-        var boxstyle = box.style.display;
-        if (boxstyle == "block") {
-          box.style.display = "none";
-        } else {
-          box.style.display = "block";
-        }
-      }
-    </script>
-
     <div class="generalNavLinks">
       <div class="hiddenSettingsBox" id="hidden">
         <div class="hiddenOption">
@@ -154,9 +63,8 @@
           <a class="hiddenText" href="/about">About</a>
         </div>
       </div>
-
       <div class="settingsbtn">
-        <a class="settingsLink" onclick="settingsFunction(this)">
+        <a class="settingsLink" onclick="settingsFunction();">
           <img class="settingsImg" src="{{ url_for('reader_blueprint.static',filename='images/settingsWheel.svg') }}"
             alt="Click here for general settings" />
         </a>
