Fixed sidebar, article sidebar bug fixed

--- a/src/umr/static/scripts/newStyling/article-settings.css
+++ b/src/umr/static/scripts/newStyling/article-settings.css
@@ -342,6 +342,7 @@ button {
     position: relative;
     top: 1em;
   }
+
 }
 
 @media screen and (max-width: 500px) {
@@ -419,6 +420,7 @@ button {
   .sortingCategories {
     width: 100%;
     justify-content: center;
+    display:none; 
   }
 
   .levelSorting {
