--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -47,7 +47,7 @@
     <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/translation-0.9.353.js') }}"></script>
   </head>
 
-  <body>
+  <body onload="sideBarLoad()">
     <div
       id="loaderanimation"
       style="
@@ -100,6 +100,20 @@
         </div>
       </header>
       {% include "sideBar.html" %}
+
+      <script>
+        function sideBarLoad(){
+          var wi = window.outerWidth; 
+          var nav = document.getElementById("myTopnav"); 
+  
+          if(wi < 600 ){
+            nav.style.display = 'none';
+            document.getElementById("arrow-p").className = 'arrow-none-block';
+            document.getElementById('main-containerID').style.cssText = 'margin:0px;';
+          }
+        }
+      </script>
+  
 
       <span id="articleID" style="display: none;">{{ article_id }}</span>
 
