--- a/src/umr/templates/bookmarks.html
+++ b/src/umr/templates/bookmarks.html
@@ -1,4 +1,5 @@
 {% include  "articleHeader.html" %}
+<body onload="sideBarLoad()">
 
 <div class="main-container" id="main-containerID">
   <header class="mdl-layout__header mdl-layout__header--transparent">
@@ -30,6 +31,19 @@
 
 
   {% include  "sideBar.html" %}
+
+  <script>
+    function sideBarLoad(){
+      var wi = window.outerWidth; 
+      var nav = document.getElementById("myTopnav"); 
+
+      if(wi < 600 ){
+        nav.style.display = 'none';
+        document.getElementById("arrow-p").className = 'arrow-none-block';
+        document.getElementById('main-containerID').style.cssText = 'margin:0px;';
+      }
+    }
+  </script>
 
   <div class="widthOfColumn">
     <div class="mdl-layout__drawer mdl-color--amber-A700">
@@ -157,4 +171,5 @@
 <!-- Dialog windows for adding a source, topic and filter. -->
 {% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
 
+</body>
 </html>
