--- a/src/umr/templates/articleHeader.html
+++ b/src/umr/templates/articleHeader.html
@@ -57,8 +57,10 @@
   <link rel="stylesheet" type="text/css"
     href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/loading.css') }}" />
 
-  <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/subscription-0.9.353.js') }}"></script>
+  <script type="text/javascript"
+    src="{{ url_for('reader_blueprint.static',filename='scripts/app/helpers/MobileHelpers.js') }}"></script>
 
+  <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/subscription-0.9.353.js') }}"></script>
   <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/translation-0.9.353.js') }}"></script>
 </head>
 
