--- a/src/umr/static/styles/article.css
+++ b/src/umr/static/styles/article.css
@@ -274,6 +274,7 @@ zeeguu tran[chosen]:after {
 }
 
 .bookmark_button .bookmarkText {
+  margin-left: -0.5em;
   visibility: hidden;
   font-size: 13px;
   background-color: #ffffff;
@@ -393,6 +394,7 @@ h6 {
 #articleInfo {
   font-size: 1em;
   text-align: left;
+  margin-left: -1em;
   color: grey;
   font-style: italic;
   font-size: 10px;
@@ -411,6 +413,7 @@ a:hover {
   width: 3.5em;
   height: 4em;
   margin-right: 1.5em;
+  margin-top: -0.5em;
   border: none;
   background: none;
   background-color: transparent;
