--- a/src/umr/templates/addSourceDialog.html
+++ b/src/umr/templates/addSourceDialog.html
@@ -1,23 +1,24 @@
-<LINK rel="stylesheet" href= "{{ url_for('reader_blueprint.static',filename='styles/flag-icon/flag-icon.css') }}" type= "text/css">
+<LINK rel="stylesheet" href="{{ url_for('reader_blueprint.static',filename='styles/flag-icon/flag-icon.css') }}"
+  type="text/css">
 
-<!-- Template for the dialog -->
+<!-- Template for the dialog 
 <script id="add-subscription-dialog-template" type="text/template">
   <div class="mdl-dialog__content">
-    <!-- List of all available languages -->
     <div id="languageOptionList"></div>
-    <!-- List of all available feeds. -->
     <div id="addableFeedList" class="list-control list-action mdl-list"></div>
   </div>
 </script>
+-->
 
-<!-- Template for language option -->
+<!-- Template for language option 
 <script id="languageOption-template" type="text/template">
     <span id="{% raw %}{{ languageOptionCode }}{% endraw %}" class="langButton">
       <span class="flag-icon flag-icon-squared flag-icon-{% raw %}{{ languageOptionCode }}{% endraw %}"></span>
     </span>
 </script>
+-->
 
-<!-- Template for feed items -->
+<!-- Template for feed items 
 <script id="feedAddable-template" type="text/template">
   <div addableID="{% raw %}{{ id }}{% endraw %}" class="mdl-list__item">
     <span class="mdl-list__item-primary-content">
@@ -29,3 +30,4 @@
     </a>
   </div>
 </script>
+-->
