--- a/src/umr/templates/addTopicDialog.html
+++ b/src/umr/templates/addTopicDialog.html
@@ -1,10 +1,9 @@
 <link rel="stylesheet" type="text/css"
   href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}" />
 
-<!-- Template for the topic dialog -->
+<!-- Template for the topic dialog
 <script id="add-topic-dialog-template" type="text/template">
   <div class="mdl-dialog__content">
-    <!-- List of all available topics. -->
     <div class="topicAddSubTitle">
       Select predefined topics
     </div><br>
@@ -14,11 +13,11 @@
     Or add your own topic!
   </div>
 </script>
+ -->
 
-<!-- Template for the filter dialog -->
+<!-- Template for the filter dialog 
 <script id="add-filter-dialog-template" type="text/template">
   <div class="mdl-dialog__content">
-    <!-- List of all available filters. -->
     <div class="topicAddSubTitle">
       Select predefined filters
     </div><br>
@@ -28,21 +27,22 @@
     Or add your own filter!
   </div>
 </script>
+-->
 
-<!-- Template for language dialog -->
+<!-- Template for language dialog 
 <script id="add-language-dialog-template" type="text/template">
   <div class="mdl-dialog__content">
-    <!-- List of all available languages. -->
     <div class="topicAddSubTitle">
       Select languages you want to read in
     </div><br>
     <div id="addableLanguageList" class="list-control list-action mdl-list"></div>
   </div>
 </script>
+-->
 
-<!-- Template for feed items interests MODIFIED -->
-<script id="topicAddable-template" type="text/template">
-  <div addableID="{% raw %}{{ id }}{% endraw %}" class="mdl-list__item">
+<!-- Template for feed items interests -->
+<script id="interests-template" type="text/template">
+  <div addableID="{% raw %}{{ id }}{% endraw %}" >
       <button
           type="button"
           class="interests"
@@ -53,12 +53,9 @@
   </div>
 </script>
 
-<!-- Template for feed items non-interest MODIFIED -->
-<script id="noninterest-template" type="text/template">
-  <div addableID="{% raw %}{{ id }}{% endraw %}" class="mdl-list__item">
-    <span class="mdl-list__item-primary-content">
-      <!-- <img src="{% raw %}{{ image_url }}{% endraw %}" class="feedIcon mdl-list__item-avatar"/> -->
-      <a class="mdl-list__item-secondary-action topic">
+<!-- Template for feed items non-interest -->
+<script id="noninterests-template" type="text/template">
+  <div addableID="{% raw %}{{ id }}{% endraw %}">
       <button
           type="button"
           class="noninterest"
@@ -69,7 +66,7 @@
   </div>
 </script>
 
-<!-- Template for feed items -->
+<!-- Template for feed items 
 <script id="languageAddable-template" type="text/template">
   <div addableID="{% raw %}{{ id }}{% endraw %}" class="mdl-list__item">
     <span class="mdl-list__item-primary-content">
@@ -81,3 +78,4 @@
     </a>
   </div>
 </script>
+-->
