--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -227,8 +227,8 @@
       <div class="articleLinkSpacer"></div>
     </script>
 
-    <!-- Dialog windows for adding a source, topic and filter. -->
-    {% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
+    <!-- Dialog windows for adding interests or non-interests -->
+    {% include 'filters.html' %}
 
 </body>
 
