--- a/src/umr/templates/bookmarks.html
+++ b/src/umr/templates/bookmarks.html
@@ -1,115 +1,92 @@
 {% include  "articleHeader.html" %}
+
 <body onload="sideBarLoad()">
 
-<div class="main-container" id="main-containerID">
-  <header class="mdl-layout__header mdl-layout__header--transparent">
-
-    <div class="mdl-layout__tab-bar mdl-js-ripple-effect" class="select-article">
-      <h1 class="select-article">Select an Article</h1>
-      <div class="all__tabs">
-        <div class="row__tab">
-          <a id="inbox_tab" href="/read" class="mdl-layout__tab">
-            Articles</a>
-        </div>
-        <div class="row__bar">
-          <div class="bar"></div>
-        </div>
-        <div class="row__tab">
-          <a id="starred_tab" href="/read/bookmarks" class="mdl-layout__tab">
-            Bookmarks</a>
-        </div>
-        <div class="row__bar">
-          <div class="bar"></div>
-        </div>
-        <div class="row__tab">
-          <a id="cohort_tab" href="/read/classroom" class="mdl-layout__tab">
-            Classroom</a>
+  <div class="main-container" id="main-containerID">
+    <header class="mdl-layout__header mdl-layout__header--transparent">
+      <div class="mdl-layout__tab-bar mdl-js-ripple-effect" class="select-article">
+        <h1 class="select-article">Select an Article</h1>
+        <div class="all__tabs">
+          <div class="row__tab">
+            <a id="inbox_tab" href="/read" class="mdl-layout__tab">
+              Articles</a>
+          </div>
+          <div class="row__bar">
+            <div class="bar"></div>
+          </div>
+          <div class="row__tab">
+            <a id="starred_tab" href="/read/bookmarks" class="mdl-layout__tab">
+              Bookmarks</a>
+          </div>
+          <div class="row__bar">
+            <div class="bar"></div>
+          </div>
+          <div class="row__tab">
+            <a id="cohort_tab" href="/read/classroom" class="mdl-layout__tab">
+              Classroom</a>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
+    </header>
 
+    {% include  "sideBar.html" %}
 
-  {% include  "sideBar.html" %}
-
-  <script>
-    function sideBarLoad(){
-      var wi = window.outerWidth; 
-      var nav = document.getElementById("myTopnav"); 
-
-      if(wi < 600 ){
-        nav.style.display = 'none';
-        document.getElementById("arrow-p").className = 'arrow-none-block';
-        document.getElementById('main-containerID').style.cssText = 'margin:0px;';
-      }
-    }
-  </script>
-
-  <div class="widthOfColumn">
-    <div class="mdl-layout__drawer mdl-color--amber-A700">
-      <nav class="mdl-navigation">
-        <!-- Sorting buttons-->
-        <div class="sortingCategories">
-          <div class="wordsSorting">
-            <div class="wordLabel">words</div>
-            <div id="triangleWords" class="triangle"></div>
-          </div>
-          <div class="levelSorting">
-            <div class="levelLabel">level</div>
-            <div id="triangleLevel" class="triangle"></div>
-          </div>
-        </div>
-      </nav>
-    </div>
-  </div>
-  <div class="widthOfColumn">
-  </div>
-  <div class="widthOfColumn">
-    <main class="mdl-layout__content">
-      <section class="mdl-layout__tab-panel is-active" id="inbox">
-        <div class="page-content">
-          <!-- Search notification -->
-          <ul id="searchNotification" class="searchNotification"></ul>
-          <!-- List of articles -->
-          <ul id="articleLinkList" class="articleLinkList"></ul>
-          <br />
-          <!-- 
-          <div id="emptyArticleListImage" class="emptyPage">
-            <p>You are not subscribed to any feeds </p>
-          </div>
-          -->
-        </div>
-      </section>
-      <section class="mdl-layout__tab-panel" id="starred">
-        <div class="page-content">
-          <ul id="starredArticleList" class="articleLinkList"></ul>
-          <div id="emptyStarredArticleListImage" class="emptyPage">
-            
-
-            <div class="icon-search">
-              <svg version="1.1" viewBox="0 0 50 50">
-                <g>
-                  <g class="notFound">
-                    <circle class="st0" cx="25" cy="25" r="17.1" />
-                    <line class="st0" x1="53.4" y1="51.6" x2="38.8" y2="36.9" />
-                  </g>
-              </svg>
+    <div class="widthOfColumn">
+      <div class="mdl-layout__drawer mdl-color--amber-A700">
+        <nav class="mdl-navigation">
+          <!-- Sorting buttons-->
+          <div class="sortingCategories">
+            <div class="wordsSorting">
+              <div class="wordLabel">words</div>
+              <div id="triangleWords" class="triangle"></div>
             </div>
-            <p> You have not bookmarked any articles yet!</p>
-
-
+            <div class="levelSorting">
+              <div class="levelLabel">level</div>
+              <div id="triangleLevel" class="triangle"></div>
+            </div>
           </div>
-        </div>
-      </section>
-    </main>
+        </nav>
+      </div>
+    </div>
+    <div class="widthOfColumn">
+    </div>
+    <div class="widthOfColumn">
+      <main class="mdl-layout__content">
+        <section class="mdl-layout__tab-panel is-active" id="inbox">
+          <div class="page-content">
+            <!-- Search notification -->
+            <ul id="searchNotification" class="searchNotification"></ul>
+            <!-- List of articles -->
+            <ul id="articleLinkList" class="articleLinkList"></ul>
+            <br />
+          </div>
+        </section>
+        <section class="mdl-layout__tab-panel" id="starred">
+          <div class="page-content">
+            <ul id="starredArticleList" class="articleLinkList"></ul>
+            <div id="emptyStarredArticleListImage" class="emptyPage">
+
+
+              <div class="icon-search">
+                <svg version="1.1" viewBox="0 0 50 50">
+                  <g>
+                    <g class="notFound">
+                      <circle class="st0" cx="25" cy="25" r="17.1" />
+                      <line class="st0" x1="53.4" y1="51.6" x2="38.8" y2="36.9" />
+                    </g>
+                </svg>
+              </div>
+              <p> You have not bookmarked any articles yet!</p>
+
+
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
   </div>
-</div>
 
-
-
-
-
-<script id="starred-articleLink-template" type="text/template">
+  <script id="starred-articleLink-template" type="text/template">
       <li class="{% raw %}{{ wordCount }}{% endraw %} {% raw %}{{articleDifficulty}}{% endraw %} fadeoutOnClick articleLinkEntry  {% raw %}{{alreadyOpenedClass}}{% endraw %}"
          articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
         <a
@@ -140,36 +117,15 @@
             {% raw %}{{/articleTopics}}{% endraw %}
 
           </div>
-           <!-- STAR AND THE LIKE BUTTON DISPLAAYED
-                    <i style="display:{% raw %}{{ articleLinkDisplayStar }}{% endraw %}"
-                      class="material-icons star">star</i>
-                    <i style="display:{% raw %}{{ articleLinkDisplayLike }}{% endraw %}" class="material-icons star">thumb_up</i>
-                  -->
         </a>
       </li>
       <div class="articleLinkSpacer"></div>
 
     </script>
 
-
-
-<!-- 
-<script id="search-notification-template" type="text/template">
-    <li class="fadeoutOnClick articleLinkEntry search-notification-box">
-        <div class="articleLinkHeader">
-            <div class="searchText headerElement">
-                {% raw %}{{ displayText }}{% endraw %}
-            </div>
-            <div class="deleteSearch headerElement">
-                <i class="material-icons">cancel</i>
-            </div>
-        </div>
-    </li>
-    <div class="articleLinkSpacer"></div>
-  </script>
-  -->
-<!-- Dialog windows for adding a source, topic and filter. -->
-{% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
+  <!-- Dialog windows for adding interests or non-interests -->
+  {% include 'filters.html' %}
 
 </body>
+
 </html>
