--- a/src/umr/templates/bookmarks.html
+++ b/src/umr/templates/bookmarks.html
@@ -3,36 +3,11 @@
 <body onload="sideBarLoad()">
 
   <div class="main-container" id="main-containerID">
-    <header class="mdl-layout__header mdl-layout__header--transparent">
-      <div class="mdl-layout__tab-bar mdl-js-ripple-effect" class="select-article">
-        <h1 class="select-article">Select an Article</h1>
-        <div class="all__tabs">
-          <div class="row__tab">
-            <a id="inbox_tab" href="/read" class="mdl-layout__tab">
-              Articles</a>
-          </div>
-          <div class="row__bar">
-            <div class="bar"></div>
-          </div>
-          <div class="row__tab">
-            <a id="starred_tab" href="/read/bookmarks" class="mdl-layout__tab">
-              Bookmarks</a>
-          </div>
-          <div class="row__bar">
-            <div class="bar"></div>
-          </div>
-          <div class="row__tab">
-            <a id="cohort_tab" href="/read/classroom" class="mdl-layout__tab">
-              Classroom</a>
-          </div>
-        </div>
-      </div>
-    </header>
-
+    {% include  "headerMenu.html" %}
     {% include  "sideBar.html" %}
 
     <div class="widthOfColumn">
-      <div class="mdl-layout__drawer mdl-color--amber-A700">
+      <div class="mdl-layout__drawer">
         <nav class="mdl-navigation">
           <!-- Sorting buttons-->
           <div class="sortingCategories">
