--- a/src/umr/templates/classroom.html
+++ b/src/umr/templates/classroom.html
@@ -1,38 +1,12 @@
 {% include 'articleHeader.html' %}
 
 <body onload="sideBarLoad()">
-  <div class="main-container">
-    <header class="mdl-layout__header mdl-layout__header--transparent">
-
-      <div class="mdl-layout__tab-bar mdl-js-ripple-effect" class="select-article">
-        <h1 class="select-article">Select an Article</h1>
-        <div class="all__tabs">
-          <div class="row__tab">
-            <a id="inbox_tab" href="/read" class="mdl-layout__tab">
-              Articles</a>
-          </div>
-          <div class="row__bar">
-            <div class="bar"></div>
-          </div>
-          <div class="row__tab">
-            <a id="starred_tab" href="/read/bookmarks" class="mdl-layout__tab">
-              Bookmarks</a>
-          </div>
-          <div class="row__bar">
-            <div class="bar"></div>
-          </div>
-          <div class="row__tab">
-            <a id="cohort_tab" href="#" class="mdl-layout__tab">
-              Classroom</a>
-          </div>
-        </div>
-      </div>
-    </header>
-
+  <div class="main-container" id="main-containerID">
+    {% include  "headerMenu.html" %}
     {% include  "sideBar.html" %}
 
     <div class="widthOfColumn">
-      <div class="mdl-layout__drawer mdl-color--amber-A700">
+      <div class="mdl-layout__drawer">
         <nav class="mdl-navigation">
 
           <!-- Sorting buttons-->
@@ -89,46 +63,6 @@
       </main>
     </div>
   </div>
-
-  <!-- Template for subscribed source items -->
-  <script id="subscription-template-source" type="text/template">
-       <span sourceRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-    	<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
-    	<a class="mdl-chip__action removeButton">
-    		<i class="material-icons">cancel</i>
-    	</a>
-    </span>
-  </script>
-
-  <!-- Template for subscribed topic items -->
-  <script id="subscription-template-topic" type="text/template">
-       <span topicRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-    	<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
-    	<a class="mdl-chip__action removeButton">
-    		<i class="material-icons">cancel</i>
-    	</a>
-    </span>
-  </script>
-
-  <!-- Template for subscribed search items -->
-  <script id="subscription-template-search" type="text/template">
-       <span searchRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-    	<span class="mdl-chip__text">{% raw %}{{ search }}{% endraw %}</span>
-    	<a class="mdl-chip__action removeButton">
-    		<i class="material-icons">cancel</i>
-    	</a>
-    </span>
-  </script>
-
-  <!-- Template for subscribed language items -->
-  <script id="subscription-template-language" type="text/template">
-       <span languageRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-    	<span class="mdl-chip__text">{% raw %}{{ language }}{% endraw %}</span>
-    	<a class="mdl-chip__action removeButton">
-    		<i class="material-icons">cancel</i>
-    	</a>
-    </span>
-  </script>
 
 
   <!-- Template for a cohort article link. -->
